--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
       .header {
         padding: 18px 16px;
       }
+      .header-box {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 16px;
+      }
       .global-box {
         display: flex;
         flex-direction: column;
@@ -126,6 +132,39 @@
         width: 100%;
         height: 210px;
       }
+      .data-transfer-language-switcher {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 8px;
+      }
+      .appear-inline-block {
+        display: inline-block;
+      }
+      .language-text {
+        display: inline-block;
+        text-decoration: none;
+        color: var(--grey-mid);
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 30px;
+        margin-top: 0;
+        margin-bottom: 0;
+        border: 0;
+        outline: 0;
+        box-shadow: none;
+      }
+      .active-lang {
+        color: var(--primary-grey);
+      }
+      .language-text:hover, .language-text:focus {
+        color: var(--primary-grey);
+      }
+      .switcher-bar {
+        width: 1px;
+        height: 15px;
+        background-color: var(--grey-mid);
+      }
 
       /*============= Media queries CSS ===========*/
       @media only screen and (max-width: 460px) {
@@ -145,10 +184,17 @@
   </head>
   <body>
     <!--=========== Header markup ============-->
-    <header class="header fixed-on-top text-orientation-center b-bottom bg-plain-white">
+    <header class="header header-box fixed-on-top text-orientation-center b-bottom bg-plain-white">
       <a href="https://www.ronorp.net/" target="_blank" class="anchor text-orientation-center">
         <img src="https://res.cloudinary.com/dqqunslwu/image/upload/v1735018253/site-logo_dkxk9z.svg" class="generic-logo" alt="logo">
       </a>
+      <div class="data-transfer-language-switcher">
+        <a href="https://kowsertanim.github.io/de-data-transfer/" class="language-text active-lang">DE</a>
+        <span class="switcher-bar appear-inline-block"></span>
+        <a href="https://kowsertanim.github.io/en-data-transfer/" class="language-text">EN</a>
+        <span class="switcher-bar appear-inline-block"></span>
+        <a href="https://kowsertanim.github.io/fr-data-transfer/" class="language-text">FR</a>
+      </div>
     </header>
 
     <!--============ Content box markup =============-->
@@ -161,5 +207,16 @@
         </div>
       </div>
     </div>
+
+    <!--============== JS =============-->
+    <script>
+      const languageLinks = document.querySelectorAll('.data-transfer-language-switcher .language-text');
+      languageLinks.forEach(link => {
+          link.addEventListener('click', (event) => {
+              languageLinks.forEach(l => l.classList.remove('active-lang'));
+              link.classList.add('active-lang');
+          });
+      });
+    </script>
   </body>
 </html>
