Language switcher added

--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
         <img src="https://res.cloudinary.com/dqqunslwu/image/upload/v1735018253/site-logo_dkxk9z.svg" class="generic-logo" alt="logo">
       </a>
       <div class="data-transfer-language-switcher">
-        <a href="https://kowsertanim.github.io/de-data-transfer/" class="language-text active-lang">DE</a>
+        <a href="https://kowsertanim.github.io/de-data-transfer/" class="language-text">DE</a>
         <span class="switcher-bar appear-inline-block"></span>
         <a href="https://kowsertanim.github.io/en-data-transfer/" class="language-text">EN</a>
         <span class="switcher-bar appear-inline-block"></span>
-        <a href="https://kowsertanim.github.io/fr-data-transfer/" class="language-text">FR</a>
+        <a href="https://kowsertanim.github.io/fr-data-transfer/" class="language-text active-lang">FR</a>
       </div>
     </header>
 
